--- a/BrnoPlaces/Strings+localization/Localizable.xcstrings
+++ b/BrnoPlaces/Strings+localization/Localizable.xcstrings
@@ -40,7 +40,21 @@
       }
     },
     "Closest" : {
-      "extractionState" : "manual"
+      "extractionState" : "manual",
+      "localizations" : {
+        "cs" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Nejbližší"
+          }
+        },
+        "sk" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Najbližšie"
+          }
+        }
+      }
     },
     "List" : {
       "extractionState" : "manual",
@@ -94,10 +108,38 @@
       }
     },
     "Navigate" : {
-      "extractionState" : "manual"
+      "extractionState" : "manual",
+      "localizations" : {
+        "cs" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Navigovat"
+          }
+        },
+        "sk" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Navigovať"
+          }
+        }
+      }
     },
     "Ooops, something went wrong..." : {
-      "extractionState" : "manual"
+      "extractionState" : "manual",
+      "localizations" : {
+        "cs" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Hups, něco se pokazilo…"
+          }
+        },
+        "sk" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Hups, niečo sa pokazilo…"
+          }
+        }
+      }
     },
     "Places" : {
       "extractionState" : "manual",
@@ -134,7 +176,38 @@
       }
     },
     "Sort" : {
-      "extractionState" : "manual"
+      "extractionState" : "manual",
+      "localizations" : {
+        "cs" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Seřadit"
+          }
+        },
+        "sk" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Zoradiť"
+          }
+        }
+      }
+    },
+    "Try Again" : {
+      "extractionState" : "manual",
+      "localizations" : {
+        "cs" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Zkusit znovu"
+          }
+        },
+        "sk" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Skúsiť znovu"
+          }
+        }
+      }
     },
     "Unknown" : {
       "extractionState" : "manual",
